compiler/mesh-parser/tests/snapshots/parser_tests__let_tuple_destructure.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
expression: "source_and_debug(\"let (a, b) = pair\")"
---
SOURCE_FILE@0..17
  LET_BINDING@0..17
    LET_KW@0..3 "let"
    WHITESPACE@3..4 " "
    TUPLE_PAT@4..10
      L_PAREN@4..5 "("
      IDENT_PAT@5..6
        IDENT@5..6 "a"
      COMMA@6..7 ","
      WHITESPACE@7..8 " "
      IDENT_PAT@8..9
        IDENT@8..9 "b"
      R_PAREN@9..10 ")"
    WHITESPACE@10..11 " "
    EQ@11..12 "="
    WHITESPACE@12..13 " "
    NAME_REF@13..17
      IDENT@13..17 "pair"
  EOF@17..17 ""
