compiler/mesh-parser/tests/snapshots/parser_tests__list_patterns_match_fixed_lengths.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
expression: "source_and_debug(\"case xs do\n  [] -> 0\n  [x, (a, b)] -> x\n  h :: t -> h\nend\")"
---
SOURCE_FILE@0..57
  CASE_EXPR@0..57
    CASE_KW@0..4 "case"
    WHITESPACE@4..5 " "
    NAME_REF@5..7
      IDENT@5..7 "xs"
    WHITESPACE@7..8 " "
    DO_KW@8..10 "do"
    NEWLINE@10..11 "\n"
    WHITESPACE@11..13 "  "
    MATCH_ARM@13..20
      LIST_PAT@13..15
        L_BRACKET@13..14 "["
        R_BRACKET@14..15 "]"
      WHITESPACE@15..16 " "
      ARROW@16..18 "->"
      WHITESPACE@18..19 " "
      LITERAL@19..20
        INT_LITERAL@19..20 "0"
    NEWLINE@20..21 "\n"
    WHITESPACE@21..23 "  "
    MATCH_ARM@23..39
      LIST_PAT@23..34
        L_BRACKET@23..24 "["
        IDENT_PAT@24..25
          IDENT@24..25 "x"
        COMMA@25..26 ","
        WHITESPACE@26..27 " "
        TUPLE_PAT@27..33
          L_PAREN@27..28 "("
          IDENT_PAT@28..29
            IDENT@28..29 "a"
          COMMA@29..30 ","
          WHITESPACE@30..31 " "
          IDENT_PAT@31..32
            IDENT@31..32 "b"
          R_PAREN@32..33 ")"
        R_BRACKET@33..34 "]"
      WHITESPACE@34..35 " "
      ARROW@35..37 "->"
      WHITESPACE@37..38 " "
      NAME_REF@38..39
        IDENT@38..39 "x"
    NEWLINE@39..40 "\n"
    WHITESPACE@40..42 "  "
    MATCH_ARM@42..53
      CONS_PAT@42..48
        IDENT_PAT@42..43
          IDENT@42..43 "h"
        WHITESPACE@43..44 " "
        COLON_COLON@44..46 "::"
        WHITESPACE@46..47 " "
        IDENT_PAT@47..48
          IDENT@47..48 "t"
      WHITESPACE@48..49 " "
      ARROW@49..51 "->"
      WHITESPACE@51..52 " "
      NAME_REF@52..53
        IDENT@52..53 "h"
    NEWLINE@53..54 "\n"
    END_KW@54..57 "end"
  EOF@57..57 ""
