compiler/mesh-parser/tests/snapshots/parser_tests__literal_int.snap
---
source: crates/mesh-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"42\")"
---
SOURCE_FILE@0..2
  LITERAL@0..2
    INT_LITERAL@0..2 "42"
  EOF@2..2 ""
