compiler/mesh-parser/tests/snapshots/parser_tests__literal_true.snap
---
source: crates/mesh-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"true\")"
---
SOURCE_FILE@0..4
  LITERAL@0..4
    TRUE_KW@0..4 "true"
  EOF@4..4 ""
