compiler/mesh-parser/tests/snapshots/parser_tests__m046_s01_parser_clustered_work_invalid_prefix.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
expression: source_and_debug(source)
---
SOURCE_FILE@0..38
  FN_DEF@0..38
    ERROR_NODE@0..14
      IDENT@0..9 "clustered"
      L_PAREN@9..10 "("
      IDENT@10..14 "work"
    FN_KW@14..16 "fn"
    NAME@16..23
      IDENT@16..23 "enqueue"
    PARAM_LIST@23..28
      L_PAREN@23..24 "("
      PARAM@24..27
        IDENT@24..27 "job"
      R_PAREN@27..28 ")"
    DO_KW@28..30 "do"
    BLOCK@30..34
      NAME_REF@30..34
        NEWLINE@30..31 "\n"
        IDENT@31..34 "job"
    NEWLINE@34..35 "\n"
    END_KW@35..38 "end"
  EOF@38..38 ""

errors:
  - expected `)` to close `clustered(work)` @15..17
