compiler/mesh-parser/tests/snapshots/parser_tests__match_arm_body_on_following_lines.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
expression: "source_and_debug(\"case o do\n  Some(x) ->\n    let y = x\n    y\n  None -> 0\nend\")"
---
SOURCE_FILE@0..58
  CASE_EXPR@0..58
    CASE_KW@0..4 "case"
    WHITESPACE@4..5 " "
    NAME_REF@5..6
      IDENT@5..6 "o"
    WHITESPACE@6..7 " "
    DO_KW@7..9 "do"
    NEWLINE@9..10 "\n"
    WHITESPACE@10..12 "  "
    MATCH_ARM@12..43
      CONSTRUCTOR_PAT@12..19
        IDENT@12..16 "Some"
        L_PAREN@16..17 "("
        IDENT_PAT@17..18
          IDENT@17..18 "x"
        R_PAREN@18..19 ")"
      WHITESPACE@19..20 " "
      ARROW@20..22 "->"
      BLOCK@22..43
        NEWLINE@22..23 "\n"
        WHITESPACE@23..27 "    "
        LET_BINDING@27..36
          LET_KW@27..30 "let"
          WHITESPACE@30..31 " "
          NAME@31..32
            IDENT@31..32 "y"
          WHITESPACE@32..33 " "
          EQ@33..34 "="
          WHITESPACE@34..35 " "
          NAME_REF@35..36
            IDENT@35..36 "x"
        NEWLINE@36..37 "\n"
        WHITESPACE@37..41 "    "
        NAME_REF@41..42
          IDENT@41..42 "y"
        NEWLINE@42..43 "\n"
    WHITESPACE@43..45 "  "
    MATCH_ARM@45..54
      IDENT_PAT@45..49
        IDENT@45..49 "None"
      WHITESPACE@49..50 " "
      ARROW@50..52 "->"
      WHITESPACE@52..53 " "
      LITERAL@53..54
        INT_LITERAL@53..54 "0"
    NEWLINE@54..55 "\n"
    END_KW@55..58 "end"
  EOF@58..58 ""
